# SageWebApp

./: .gitignore  Dockerfile  README.md  app.py  example_config.json  pyproject.toml  requirements.txt  sage_input_creator.py
.github/workflows/: dockerhub.yml  python-package.yml
src/sage_web_apps/: run.py  sage_input_app.py
