[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-web-app"
version = "0.1.0"
description = "Web applications for Sage MS/MS search engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Patrick Garrett", email = "pgarrett@scripps.edu"}
]
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "streamlit-permalink-pg>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
]

[project.scripts]
sage-app = "sage_web_apps.run:run_sage_app"
sage-input = "sage_web_apps.run:run_input_app"

[tool.setuptools]
packages = ["sage_web_apps"]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
